--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(Part2)
 
 set(CMAKE_CXX_STANDARD 11)
 
-add_executable(Part2 main.cpp parse.cpp)
+add_executable(Part2 main.cpp parse.cpp lex.cpp)
